MODSHSLIDE-201 #resolve #comment Opacity was affecting IE 8 and fixing little mistake with a white space

--- a/code/media/mod_jsshackslides/css/jsshackslides.css
+++ b/code/media/mod_jsshackslides/css/jsshackslides.css
@@ -42,6 +42,10 @@
 	-o-flex-grow: 1;
 	flex-grow: 1;
 	position: relative;
+	display: -webkit-box;
+	display: -moz-box;
+	display: -ms-flexbox;
+	display: -webkit-flex;
 	display: flex;
 	-webkit-box-sizing: border-box;
 	-moz-box-sizing: border-box;
